--- a/index.html
+++ b/index.html
@@ -1,7 +1,18 @@
-<!DOCTYPE html>
 <html>
-<body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
-</body>
+  <title>
+    First website
+  </title>
+  
+  <body>
+    <h1>This is my first github page</h1>
+  </body>
+  
+  <style>
+    body {
+      background-color:green;
+      color:#fff;
+      text-align:center;
+    }
+  </style>
+  
 </html>
